# genai-class-project

./: project_plan.md  requirements.txt
research_dating/: .env.example  .gitignore  pyproject.toml
research_dating/app/: streamlit_app.py
research_dating/app/components/: email_display.py  faculty_card.py
research_dating/baseline/: tfidf_baseline.py
research_dating/chunking/: chunk_pipeline.py  header_chunker.py  sliding_window_chunker.py
research_dating/data/: faculty_index.json
research_dating/evaluation/: cohen_kappa.py  eval_results.json  eval_summary.json  judge_prompts.py  rubric.md  run_eval.py  test_queries.json
research_dating/ingestion/: fetch_nih_grants.py  fetch_pubmed.py  parse_cvs.py  run_ingestion.py  scrape_lab_pages.py
research_dating/pipeline/: email_drafter.py  query_clarifier.py  rag_pipeline.py  ranker.py  retriever.py
research_dating/vectordb/: build_index.py  chroma_store.py  embed.py
